[package]
name = "kvs"
version = "0.1.0"
authors = ["ouromoros <ouromoros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
failure = "0.1.8"
failure_derive = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
bson = "1.2.2"
log = "0.4.0"
simple_logger = "1.11.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
