[package]
name = "kvs"
version = "0.1.0"
authors = ["ouromoros <ouromoros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
failure = "0.1.8"
failure_derive = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4.3"
log = "0.4.0"
env_logger = "0.8.0"
sled = "0.34.6"
crossbeam = "0.7.1"
num_cpus = "1.13.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.3.4"
rand = "0.8.3"
rand_chacha = "0.3.0"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[lib]
bench = false

[[bin]]
name = "kvs-server"
bench = false

[[bin]]
name = "kvs-client"
bench = false

[[bench]]
name = "benches"
harness = false
