[package]
name = "serde-exeercise"
version = "0.1.0"
authors = ["ouromoros <ouromoros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.6.4"
bson = "1.2.2"
